@@ -74,7 +74,8 @@ static
 SCIP_RETCODE fixVariable(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_VAR**            pseudocands,        /**< array of unfixed variables */
-   int                   npseudocands        /**< number of unfixed variables */
+   int                   npseudocands,       /**< number of unfixed variables */
+   SCIP_Real             large               /**< large value to be used instead of infinity */
    )
 {
    SCIP_VAR* var;
@@ -112,6 +113,33 @@ SCIP_RETCODE fixVariable(
    /* fix variable to its current pseudo solution value */
    var = pseudocands[bestcand];
    solval = SCIPgetVarSol(scip, var);
+
+   /* adapt solution value if it is infinite */
+   if( SCIPisInfinity(scip, solval) )
+   {
+      SCIP_Real lb;
+      assert(SCIPisInfinity(scip, SCIPvarGetUbLocal(var)));
+      lb = SCIPvarGetLbLocal(var);
+
+      /* adapt fixing value by changing it to a large value */
+      if( SCIPisInfinity(scip, -lb) )
+         solval = SCIPceil(scip, large);
+      else if( !SCIPisInfinity(scip, SCIPceil(scip, lb+large)) )
+         solval = SCIPceil(scip, lb+large);
+   }
+   else if( SCIPisInfinity(scip, -solval) )
+   {
+      SCIP_Real ub;
+      assert(SCIPisInfinity(scip, -SCIPvarGetLbLocal(var)));
+      ub = SCIPvarGetUbLocal(var);
+
+      /* adapt fixing value by changing it to a large negative value */
+      if( SCIPisInfinity(scip, ub) )
+         solval = SCIPfloor(scip, -large);
+      else if( !SCIPisInfinity(scip, -SCIPfloor(scip, ub-large)) )
+         solval = SCIPfloor(scip, ub-large);
+   }
+
    assert(SCIPisFeasIntegral(scip, solval)); /* in probing, we always have the pseudo solution */
    SCIPdebugMessage(" -> fixed variable <%s>[%g,%g] = %g (%d candidates left)\n",
       SCIPvarGetName(var), SCIPvarGetLbLocal(var), SCIPvarGetUbLocal(var), solval, npseudocands - 1);
@@ -183,6 +211,7 @@ SCIP_DECL_HEUREXEC(heurExecFixandinfer)
    int startncands;
    int divedepth;
    SCIP_Bool cutoff;
+   SCIP_Real large;
 
    *result = SCIP_DIDNOTRUN;
 
@@ -212,6 +241,12 @@ SCIP_DECL_HEUREXEC(heurExecFixandinfer)
    cutoff = FALSE;
    divedepth = 0;
    startncands = ncands;
+
+   /* determine large value to set variables to */
+   large = SCIPinfinity(scip);
+   if( !SCIPisInfinity(scip, 0.1 / SCIPfeastol(scip)) )
+      large = 0.1 / SCIPfeastol(scip);
+
    while( !cutoff && ncands > 0
       && (divedepth < heurdata->minfixings || (startncands - ncands) * 2 * MAXDIVEDEPTH >= startncands * divedepth)
       && !SCIPisStopped(scip) )
@@ -222,7 +257,7 @@ SCIP_DECL_HEUREXEC(heurExecFixandinfer)
       SCIP_CALL( SCIPnewProbingNode(scip) );
 
       /* fix next variable */
-      SCIP_CALL( fixVariable(scip, cands, ncands) );
+      SCIP_CALL( fixVariable(scip, cands, ncands, large) );
 
       /* propagate the fixing */
       SCIP_CALL( SCIPpropagateProbing(scip, heurdata->proprounds, &cutoff, NULL) );
