@@ -175,6 +175,7 @@ fixed bugs:
   time limit
 - fixed bug in SCIP probing mode with cleared LPI state but solved LP
 - fixed bug in SoPlex LPI where objective sense was not correct after reading LP from file in SCIPlpiReadLP()
+- fixed potential bug in fix-and-infer heuristic with variables being fixed to infinite value
 
 parameters:
 - new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
